# flask-auth

./: pyproject.toml
flask_auth/: app.py  db.sqlite
flask_auth/auth/: auth.py  utils.py
flask_auth/auth/templates/: login.html
flask_auth/db/: user.py
flask_auth/main/: main.py
flask_auth/main/templates/: main.html
flask_auth/static/: alert.css
flask_auth/templates/: alert.html  base.html  head.html
tests/: test_flask_auth.py
